--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-    "python.pythonPath": "D:\\Applications\\Anaconda\\envs\\djangoenv\\python.exe"
+    "python.pythonPath": "D:\\Applications\\Anaconda\\envs\\djangoenv\\python.exe",
+    "files.exclude": {
+        "**/.classpath": true,
+        "**/.project": true,
+        "**/.settings": true,
+        "**/.factorypath": true
+    }
 }
